split PersistenceControllerTest.testSaveAndLoadPoolRegistry into two tests.